--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@iconify-json/ri": "^1.1.1",
 		"@lottiefiles/svelte-lottie-player": "^0.2.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@svelteness/kit-docs": "^0.6.1",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
 		"@tailwindcss/forms": "^0.4.0",
 		"@tailwindcss/typography": "^0.5.2",
@@ -27,17 +29,22 @@
 		"svelte": "^3.44.0",
 		"svelte-file-dropzone": "^1.0.0-dev.1",
 		"svelte-preprocess": "^4.10.1",
-		"tailwindcss": "^3.0.12"
+		"tailwindcss": "^3.0.12",
+		"unplugin-icons": "^0.13.4"
 	},
 	"type": "module",
 	"dependencies": {
+		"@leveluptuts/svelte-toy": "^0.0.18",
+		"@urql/exchange-auth": "^0.1.7",
 		"filepond": "^4.30.3",
 		"filepond-plugin-image-preview": "^4.6.10",
 		"graphql": "^16.3.0",
 		"pluralize": "^8.0.0",
 		"svelte-apollo": "^0.5.0",
+		"svelte-dragdroplist": "^1.1.1",
 		"svelte-filepond": "^0.2.0",
 		"svelte-range-slider-pips": "^2.0.3",
+		"svelte-select": "^4.4.7",
 		"svelte-sortable-list": "^1.1.0",
 		"swiper": "^8.0.6"
 	}
